# Magolor

./: .gitignore  Cargo.toml  CurrentBugs  example_game_clean.mg  script.mg
Gear/: README.md  module_test.sh  move.sh  package_test.sh  project.toml  test.sh
Gear/module-test-app/: project.toml
Gear/module-test-lib/: project.toml
Gear/src/: main.cpp
Gear/test-multifile-project/: README.md  project.toml
MagolorCompiler/: Cargo.toml  README.md  build_and_run.sh  cpp_blocks.cpp  debug.sh  disasemble.sh  fix.py  fix.sh  full_output.txt  hallo.ll  hallo.mg  hallo.s  hallo_full.txt  install_lsp.sh  program  project.toml  runtime.c  submodules_demo.cpp  test.sh  test_order  test_order.mg  test_order.s  test_with_print  test_with_print.ll  test_with_print.mg  test_wrapper.c  update.sh
MagolorCompiler/Examples/: TargetSyntax.mg  cpp_blocks.mg  example_cimport.mg  example_cpp_blocks.mg  simple_cpp_sharing.mg  submodules_demo.mg  test_server.mg  web_demo.mg
MagolorCompiler/include/: ast.hpp  codegen.hpp  diagnostics.hpp  document.hpp  error.hpp  jsonrpc.hpp  lexer.hpp  lsp_completion.hpp  lsp_logger.hpp  lsp_project.hpp  lsp_semantic.hpp  lsp_server.hpp  module.hpp  package.hpp  package_registry.hpp  parser.hpp  position.hpp  server.hpp  stdlib.hpp  stdlib_manager.hpp  stdlib_parser.hpp  symbol_table.hpp  typechecker.hpp
MagolorCompiler/src/: codegen.cpp  lexer.cpp  lsp_completion.cpp  lsp_project.cpp  lsp_semantic.cpp  lsp_server.cpp  main.cpp  main.rs  parser.cpp  stdlib_manager.cpp  (+2 more)
Website/: .gitignore  README.md  project.toml
src/: lib.rs  main.rs
(+117 files in other folders)
