[package]
name = "magolor-compiler"
version = "0.2.0"
edition = "2021"
authors = ["Magolor Team"]

[dependencies]
anyhow = "1.0"
logos = "0.13"

# LLVM removed - now using fast bytecode VM!
# This makes compilation instant and enables hot-reload

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1  # Faster dev builds
